# http-scavenger-hunt

./: .gitignore  Dockerfile  README.md  http-scavenger-hunt.cabal  stack.yaml
app/: Main.hs
src/HttpHunt/: Api.hs  Config.hs  Exceptions.hs  Frontend.hs  Redis.hs  Types.hs
src/HttpHunt/Admin/: Api.hs
src/HttpHunt/Public/: Api.hs
static/: scoreboard.js  styles.css
