name:                http-scavenger-hunt
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/http-scavenger-hunt#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     HttpHunt.Api
                      , HttpHunt.Config
                      , HttpHunt.Frontend
                      , HttpHunt.Exceptions
                      , HttpHunt.Redis
                      , HttpHunt.Types
                      , HttpHunt.Admin.Api
                      , HttpHunt.Public.Api
  default-extensions: DeriveGeneric, OverloadedStrings
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , blaze-html
                     , bytestring
                     , containers
                     , envy
                     , hashable
                     , hedis
                     , lens-aeson
                     , lens
                     , rio
                     , servant-blaze
                     , servant-server
                     , stm
                     , text
                     , time
                     , unordered-containers
                     , uuid
                     , wai
                     , warp
  default-language:    Haskell2010

executable http-scavenger-hunt
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , http-scavenger-hunt
                     , aeson
                     , bytestring
                     , envy
                     , hedis
                     , http-types
                     , rio
                     , servant-server
                     , text
                     , utf8-string
                     , wai
                     , warp
  default-language:    Haskell2010

test-suite http-scavenger-hunt-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , http-scavenger-hunt
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/http-scavenger-hunt
